# Paperlist

./: .gitignore  README.md  pyproject.toml
get_papers_list/: __init__.py  api.py  main.py  parser.py  utils.py
tests/: test_api.py  test_parser.py  test_utils.py
