[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with authors from pharma/biotech companies"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "get_papers_list" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
lxml = "^5.2.1"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
twine = "^6.1.0"
